methods.slug.SlugTracking.scala.error
Erreur de compilation :
SlugTracking:11: error: type mismatch;
 found   : Int(0)
 required: Boolean
    return 0
           ^